--- a/frontend/src/app/gradManagement/gradmanagement/grad-details/grad-details.component.scss
+++ b/frontend/src/app/gradManagement/gradmanagement/grad-details/grad-details.component.scss
@@ -1,6 +1,6 @@
-/* body{
-    background: -webkit-linear-gradient(left, #3931af, #00c6ff);
-} */
+//  body{
+//     background: -webkit-linear-gradient(left, #3931af, #00c6ff);
+// } 
 .emp-profile{
     padding: 1%;
     margin-top: 1%;
