--- a/frontend/src/app/gradManagement/gradmanagement/grad-details/grad-details.component.scss
+++ b/frontend/src/app/gradManagement/gradmanagement/grad-details/grad-details.component.scss
@@ -80,16 +80,19 @@
 .profile-work a{
     text-decoration: none;
     color: #495057;
-    font-weight: 600;
+    font-weight: 540;
     font-size: 14px;
 }
 .profile-work ul{
     list-style: none;
 }
-.profile-tab label{
+.about-tab label{
     font-weight: 600;
 }
-.profile-tab p,a{
+.about-tab p,a{
     font-weight: 600;
     color: #0062cc;
+}
+.about-tab{
+    margin-top: -5%;
 }
