--- a/assess-frontend/src/app/report/front/front.component.html
+++ b/assess-frontend/src/app/report/front/front.component.html
@@ -87,7 +87,7 @@
                    
                     <!-- <td>{{  ( (((i+1)*25)-1)/99 )*100      }}</td> -->
                     <td>{{product.successPercentage}}</td>
-                    <td>{{i+1}}</td>
+                    <td>{{product.rankGrad}}</td>
               
                     <!-- <a routerLink="/detail/{{product.gradEmployee.employeeId}}"> <td>{{product.gradEmployee.employeeId}}</td> </a>
                     <td>{{product.gradEmployee.employeeName}}</td> 
