--- a/frontend/src/app/gradManagement/gradmanagement/add-edit/add-edit.component.html
+++ b/frontend/src/app/gradManagement/gradmanagement/add-edit/add-edit.component.html
@@ -1,5 +1,5 @@
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-<div class="card">
+<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+ --><div class="card">
     <h3 class="card-header text-center py-4" style="background-color: rgba(124, 171, 241, 0.473); 
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif">
         <strong>Add/Edit Grad</strong>
